force-app/main/default/objects/Log__e/fields/ErrorId__c.field-meta.xml
<CustomField>
    <fullName>ErrorId__c</fullName>
    <label>Error ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>