force-app/main/default/objects/Log__e/fields/ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ExceptionStackTrace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>