force-app/main/default/objects/Log__e/fields/IsBatch__c.field-meta.xml
<CustomField>
    <fullName>IsBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when executed from a batch</description>
    <label>Batch</label>
    <type>Checkbox</type>
</CustomField>