force-app/main/default/objects/Log__e/fields/IsQueueable__c.field-meta.xml
<CustomField>
    <fullName>IsQueueable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>