force-app/main/default/objects/Log__e/fields/IsTrigger__c.field-meta.xml
<CustomField>
    <fullName>IsTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if the current context for the Apex code is a trigger, not a Visualforce page, a Web service, or an executeanonymous() API call.</description>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>