force-app/main/default/objects/Log__e/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Time recording began (if applicable)</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>