force-app/main/default/objects/Log__e/fields/TriggerContext__c.field-meta.xml
<CustomField>
    <fullName>TriggerContext__c</fullName>
    <description>Possible values of the System.TriggerOperation enum are: BEFORE_INSERT, BEFORE_UPDATE, BEFORE_DELETE,AFTER_INSERT, AFTER_UPDATE, AFTER_DELETE, and AFTER_UNDELETE.</description>
    <label>Trigger Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>