force-app/main/default/objects/Log__e/fields/TriggerSize__c.field-meta.xml
<CustomField>
    <fullName>TriggerSize__c</fullName>
    <label>Trigger Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>